// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (1) 1`] = `
<gux-date-time-beta>
  <mock:shadow-root>
    <span>
      7/7/22, 9:35 AM
    </span>
  </mock:shadow-root>
</gux-date-time-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (2) 1`] = `
<gux-date-time-beta>
  <mock:shadow-root>
    <span>
      Jul 7, 2022, 9:35:30 AM
    </span>
  </mock:shadow-root>
</gux-date-time-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (3) 1`] = `
<gux-date-time-beta>
  <mock:shadow-root>
    <span>
      Thursday, July 7, 2022 at 9:35:30 AM GMT-04:00
    </span>
  </mock:shadow-root>
</gux-date-time-beta>
`;

exports[`#render different datetime formats eg(short,medium,full,long) should render component as expected (4) 1`] = `
<gux-date-time-beta>
  <mock:shadow-root>
    <span>
      July 7, 2022 at 9:35:30 AM GMT-4
    </span>
  </mock:shadow-root>
</gux-date-time-beta>
`;
